--- a/ccsm-all.yml
+++ b/ccsm-all.yml
@@ -1,7 +1,7 @@
 services:
 
   zeebe:
-    image: camunda/zeebe:8.0.0
+    image: camunda/zeebe:${CAMUNDA_CLOUD_VERSION:-8.0.0}
     container_name: zeebe
     environment:
       - "JAVA_TOOL_OPTIONS=-Xms512m -Xmx512m"
@@ -17,7 +17,7 @@ services:
       - camunda-cloud
 
   operate:
-      image: camunda/operate:8.0.0
+      image: camunda/operate:${CAMUNDA_CLOUD_VERSION:-8.0.0}
       container_name: operate
       environment:
 #        # For more information regarding configuration with Identity see: https://docs.camunda.io/docs/self-managed/operate-deployment/authentication/#iam
@@ -39,7 +39,7 @@ services:
         - elasticsearch
 
   tasklist:
-      image: camunda/tasklist:8.0.0
+      image: camunda/tasklist:${CAMUNDA_CLOUD_VERSION:-8.0.0}
       container_name: tasklist
       environment:
         # For more information regarding configuration with IAM see: https://docs.camunda.io/docs/self-managed/tasklist-deployment/authentication/#iam
@@ -66,7 +66,7 @@ services:
     # For more information see: https://docs.camunda.io/docs/self-managed/optimize-deployment/setup/
     restart: on-failure
     container_name: optimize
-    image: camunda/optimize:3.8.0-RC2
+    image: camunda/optimize:${CAMUNDA_OPERATE_VERSION:-3.8.0-RC2}
     ports:
       - "8090:8090"
     environment:
@@ -132,7 +132,7 @@ services:
       - identity-network
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:${ES_VERSION:-7.10.0}
+    image: docker.elastic.co/elasticsearch/elasticsearch:${ELASTIC_VERSION:-7.10.0}
     container_name: elasticsearch
     environment:
       - cluster.name=elasticsearch
