--- a/ccsm-all.yml
+++ b/ccsm-all.yml
@@ -44,6 +44,7 @@ services:
         - camunda-cloud
         - identity-network
       depends_on:
+        - keycloak
         - elasticsearch
 
   tasklist:
@@ -68,6 +69,7 @@ services:
         - camunda-cloud
         - identity-network
       depends_on:
+        - keycloak
         - elasticsearch
 
   optimize:
@@ -99,6 +101,9 @@ services:
     networks:
       - camunda-cloud
       - identity-network
+    depends_on:
+      - keycloak
+      - elasticsearch
 
   identity:
     container_name: identity
