--- a/ccsm-all.yml
+++ b/ccsm-all.yml
@@ -1,3 +1,9 @@
+# Not for production use!
+# This configuration is designed for local development and only if you can't run Kubernetes.
+# For production, we strongly recommend using our Kubernetes Helm Charts:
+# https://docs.camunda.io/docs/self-managed/platform-deployment/kubernetes-helm/
+# For local development, we recommend using KIND with a similar configuration provided here:
+# https://docs.camunda.io/docs/self-managed/platform-deployment/kubernetes-helm/#installing-the-camunda-helm-chart-locally-using-kind
 services:
 
   zeebe:
