--- a/ccsm-all.yml
+++ b/ccsm-all.yml
@@ -84,7 +84,7 @@ services:
     container_name: optimize
     ports:
       - "8083:8090"
-    environment: # https://docs.camunda.io/docs/self-managed/optimize-deployment/setup/installation/#available-environment-variables
+    environment: # https://c8.docs.camunda.io/docs/self-managed/optimize-deployment/setup/installation/#available-environment-variables
       - SPRING_PROFILES_ACTIVE=ccsm
       - CAMUNDA_OPTIMIZE_IDENTITY_ISSUER_URL=http://localhost:18080/auth/realms/camunda-platform
       - CAMUNDA_OPTIMIZE_IDENTITY_ISSUER_BACKEND_URL=http://keycloak:8080/auth/realms/camunda-platform
