--- a/ccsm-all.yml
+++ b/ccsm-all.yml
@@ -81,7 +81,7 @@ services:
       - elasticsearch
 
   optimize: # https://c8.docs.camunda.io/docs/self-managed/platform-deployment/docker/#optimize
-    image: camunda/optimize:${CAMUNDA_OPERATE_VERSION:-3.8.0-RC2}
+    image: camunda/optimize:${CAMUNDA_OPERATE_VERSION:-3.8.0}
     container_name: optimize
     ports:
       - "8083:8090"
